# dl-framework

./: .dockerignore  .dvcignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  sample.env
.dvc/: config
.github/workflows/: docs-and-pages.yml
configs/: artifacts.yaml  eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/data/: cmr.yaml  default.yaml  ecg.yaml
configs/debug/: default.yaml
configs/hparams_search/: cmr_classifier.yaml  default.yaml  ecg_classifier.yaml
configs/logger/: neptune.yaml  wandb.yaml
configs/model/: cmr_classifier.yaml  cmr_encoder.yaml  ecg_classifier.yaml  ecg_encoder.yaml  mae.yaml  sim_clr.yaml
configs/paths/: aws.yaml  default.yaml
configs/runner/: aws.yaml  default.yaml
configs/trainer/: default.yaml
data/: .gitignore  embeddings.dvc  interim.dvc  processed.dvc  raw-zips.dvc
docker/: Dockerfile  README.md  build.sh
docker/aws/: Dockerfile
docs/: index.md
docs/data/: data-management.md  datasets.md  preprocessing.md
docs/development/: ci-cd.md  docker.md  tools.md
docs/getting-started/: configuration.md  installation.md
docs/models/: architectures.md  training.md
notebooks/: methods_augmentations.py  methods_datasets_acdc.ipynb  methods_datasets_arrhythmia.ipynb  methods_datasets_ptb_xl.ipynb  methods_viz.py
notebooks/evaluation/: centroid_analysis.py  centroid_analysis_cmr.py  cmr_clustering_metrics_latex.tex  cmr_clustering_metrics_summary.csv  cmr_fold_5_distance_ratio_latex.tex  cmr_fold_5_per_class_distance_ratio.csv  cmr_fold_5_per_class_silhouette.csv  cmr_fold_5_silhouette_latex.tex  phase1.py  phase1_cmr.py  phase2.py  phase3.py
notebooks/exploration/: phase2.2.py  phase_1.2.py  ptbxl_eda.py
notebooks/quarto_book/: _quarto.yml  dataset_cmr_acdc.qmd  dataset_ecg_arrhythmia.qmd  dataset_ecg_ptb_xl.qmd  index.qmd  phase1.qmd  phase2.qmd  phase3.qmd
scripts/: process_dataset.sh  test_20label_precision.py
scripts/aws/: entrypoint.sh  sm_entrypoint.py  test.py  train.py
scripts/datasets/: unzip_raw.sh
src/: eval.py  generate_model_artifacts.py  train.py
tests/: conftest.py  test_configs.py  test_quarto.py
(+92 files in other folders)
